--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
+    "vite-plugin-vue-type-imports": "^0.2.4",
     "vue-tsc": "^1.2.0"
   }
 }
