--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,39 +1,39 @@
 version: '3.8'
 services:
-        backend_flask_app:
-                container_name: ${TEAM_NAME}_backend_flask_app
-                ports:
-                        - ${FLASK_EXTERNAL_PORT}:${FLASK_INTERNAL_PORT}
-                expose:
-                        - ${FLASK_EXTERNAL_PORT}
-                restart: always
-                build:
-                        context: ./backend
-                        dockerfile: Dockerfile
-                depends_on:
-                        - db
-                environment:
-                        - FLASK_APP=${APP_ROOT}.py
-                        - FLASK_RUN_HOST=0.0.0.0
-                        - FLASK_DEBUG=0
-                networks:
-                        flask_network:
-                                aliases:
-                                        - flask-network
-                command: gunicorn --bind 0.0.0.0:${FLASK_INTERNAL_PORT} --workers 4 "${APP_ROOT}:${APP_ROOT}"
-        db:
-                container_name: ${TEAM_NAME}_db
-                image: mysql:latest
-                restart: always
-                environment:
-                        MYSQL_USER: admin
-                        MYSQL_PASSWORD: admin
-                        MYSQL_DATABASE: kardashiandb
-                        MYSQL_ROOT_PASSWORD: admin
-                volumes:
-                        - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-                networks:
-                        - flask_network
+    backend_flask_app:
+        container_name: ${TEAM_NAME}_backend_app
+        ports:
+                - 0.0.0.0:${APP_PORT}:5000
+        restart: always
+        build:
+                context: ./backend
+                dockerfile: Dockerfile
+                args:
+                        DB_NAME: ${TEAM_NAME}
+        depends_on:
+                - db
+        environment:
+                - FLASK_APP=app.py
+                - FLASK_RUN_HOST=0.0.0.0
+                - FLASK_DEBUG=0
+        networks:
+                flask_network:
+                        aliases:
+                                - flask-network
+        command: gunicorn --bind 0.0.0.0:5000 --workers 4 "app:app"
+    db:
+        container_name: ${TEAM_NAME}_db
+        image: mysql:latest
+        restart: always
+        environment:
+                MYSQL_USER: admin
+                MYSQL_PASSWORD: admin
+                MYSQL_DATABASE: kardashiandb
+                MYSQL_ROOT_PASSWORD: admin
+        volumes:
+                - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+        networks:
+                - flask_network
 volumes:
         flask_volume:
 networks:
