--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,20 @@
 version: '3.8'
 services:
+    frontend_app:
+        container_name: ${TEAM_NAME}_frontend_app
+        ports:
+                - 4548:5173
+        expose:
+                - 4548
+        restart: always
+        build:
+                context: ./frontend
+                dockerfile: Dockerfile
+        networks:
+                flask_network:
+                        aliases:
+                                - flask-network
+        command: nginx -g 'daemon off;'
     backend_flask_app:
         container_name: ${TEAM_NAME}_backend_app
         ports:
