--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
+  "prettier": {
+    "semi": false
+  },
   "dependencies": {
     "axios": "^1.3.4",
     "vue": "^3.2.47"
@@ -16,6 +19,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prettier": "2.8.7",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
