--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,12 @@ cffi==1.15.1
 click==8.1.3
 colorama==0.4.6
 cryptography==39.0.2
+cycler==0.11.0
 Flask==2.2.2
 Flask-Cors==3.0.10
-Flask-SQLAlchemy==3.0.2
+Flask-MySQL==1.5.2
+Flask-SQLAlchemy==3.0.3
+fonttools==4.38.0
 gitdb==4.0.10
 GitPython==3.1.30
 greenlet==2.0.2
@@ -13,18 +16,21 @@ importlib-metadata==6.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
+kiwisolver==1.4.4
 MarkupSafe==2.1.2
+matplotlib==3.5.3
 nltk==3.8.1
-numpy==1.24.2
-pandas==1.5.3
+numpy==1.21.6
+packaging==23.1
+Pillow==9.5.0
 protobuf==3.20.3
 pycparser==2.21
 PyMySQL==1.0.2
+pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2022.7.1
-regex==2023.3.23
-scikit-learn==1.2.2
-scipy==1.10.1
+regex==2022.10.31
+scikit-learn==1.0.2
+scipy==1.7.3
 six==1.16.0
 smmap==5.0.0
 SQLAlchemy==1.4.46
