--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     frontend_app:
         container_name: ${TEAM_NAME}_frontend_app
         ports:
-                - 0.0.0.0:4548:80
+                - 0.0.0.0:${FRONTEND_EXTERNAL_PORT}:${FRONTEND_INTERNAL_PORT}
         expose:
-                - 80
+                - ${FRONTEND_INTERNAL_PORT} 
         restart: always
         build:
                 context: ./frontend
@@ -18,7 +18,7 @@ services:
     backend_flask_app:
         container_name: ${TEAM_NAME}_backend_app
         ports:
-                - 0.0.0.0:${APP_PORT}:5000
+                - 0.0.0.0:${FLASK_EXTERNAL_PORT}:${FLASK_INTERNAL_PORT}
         restart: always
         build:
                 context: ./backend
